--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -31,35 +31,187 @@
 
 </style>
 <body class="container">
-  <div class="row">
-    <div class="col-12">
-      <h1 style="text-align: center;">Welcome to GreenEdge training</h1>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-4 list-content-container">
-      <a href="{{site.baseurl}}/introduction">
-        <div class="list-content">
-          <div class="col-md-12">
-            <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
-          </div>
-          <div class="col-md-12">
-            <h2>What is GreenEdge?</h2>
-          </div>
-          <p>Ultimately, <span class="msb">microServiceBus.com</span> is designed fill the gap between the out-of-the
-            box
-            device management
-            provided by vendors such as Microsoft, Amazon and IBM, and what is required by the enterprise. <br />It aims
-            to address common challenges in the industry of IoT, such as planning for change, steep learning curves and
-            provisioning of new devices.</p>
-  
+    <div class="row">
+        <div class="col-12">
+            <h1 style="text-align: center;">Welcome to GreenEdge training</h1>
         </div>
-      </a>
     </div>
-  </div>
-  <!-- <footer>
-    &copy; to me
-  </footer> -->
+    <div class="row">
+        <div class="col-4 list-content-container">
+            <a href="{{site.baseurl}}/introduction">
+                <div class="list-content">
+                    <div class="col-md-12">
+                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
+                    </div>
+                    <div class="col-md-12">
+                        <h2>What is GreenEdge?</h2>
+                    </div>
+                    <p>
+                        Learn more about what the GreenEdge portal supports.
+                    </p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 list-content-container">
+            <a href="{{site.baseurl}}/dashboard">
+                <div class="list-content">
+                    <div class="col-md-12">
+                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
+                    </div>
+                    <div class="col-md-12">
+                        <h2>Dashboard</h2>
+                    </div>
+                    <p>
+                        Explanation of the Greenedge dashboard and its components.
+                    </p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 list-content-container">
+            <a href="{{site.baseurl}}/business-unit">
+                <div class="list-content">
+                    <div class="col-md-12">
+                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
+                    </div>
+                    <div class="col-md-12">
+                        <h2>Edit Business unit information</h2>
+                    </div>
+                    <p>
+                        This module will cover how to view and edit business unit information
+                    </p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 list-content-container">
+            <a href="{{site.baseurl}}/sites">
+                <div class="list-content">
+                    <div class="col-md-12">
+                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
+                    </div>
+                    <div class="col-md-12">
+                        <h2>Manage sites</h2>
+                    </div>
+                    <p>
+                        Learn how to create/ edit or delete a site in this chapter
+                    </p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 list-content-container">
+            <a href="{{site.baseurl}}/emission-source">
+                <div class="list-content">
+                    <div class="col-md-12">
+                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
+                    </div>
+                    <div class="col-md-12">
+                        <h2>Manage emission source</h2>
+                    </div>
+                    <p>
+                        There are two different kind of emission sources. Site related emission sources and non site related emissions sources. Learn how to create/edit and delete emission sources.
+                    </p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 list-content-container">
+            <a href="{{site.baseurl}}/baseline-budget">
+                <div class="list-content">
+                    <div class="col-md-12">
+                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
+                    </div>
+                    <div class="col-md-12">
+                        <h2>Create baseline & budget</h2>
+                    </div>
+                    <p>
+                        Create goals, this section will show how to create a baseline and budget.
+                    </p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 list-content-container">
+            <a href="{{site.baseurl}}/actions">
+                <div class="list-content">
+                    <div class="col-md-12">
+                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
+                    </div>
+                    <div class="col-md-12">
+                        <h2>Manage actions</h2>
+                    </div>
+                    <p>
+                        To follow up your goals, use actions. This module shows how to create/ edit and remove actions.
+                    </p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 list-content-container">
+            <a href="{{site.baseurl}}/members">
+                <div class="list-content">
+                    <div class="col-md-12">
+                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
+                    </div>
+                    <div class="col-md-12">
+                        <h2>Manage members</h2>
+                    </div>
+                    <p>
+                        Discover how to Add/ edit and remove members.
+                    </p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 list-content-container">
+            <a href="{{site.baseurl}}/reports">
+                <div class="list-content">
+                    <div class="col-md-12">
+                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
+                    </div>
+                    <div class="col-md-12">
+                        <h2>Manage reports</h2>
+                    </div>
+                    <p>
+                        Learn how to create your own reports based on the collected data
+                    </p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 list-content-container">
+            <a href="{{site.baseurl}}/extra">
+                <div class="list-content">
+                    <div class="col-md-12">
+                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
+                    </div>
+                    <div class="col-md-12">
+                        <h2>Extra</h2>
+                    </div>
+                    <ul>
+                        <li>How to create a support/bug</li>
+                        <li>How to suggest feature</li>
+                        <li>Monthly report</li>
+                        <li>(SiteAdmin only) Split business unit</li>
+                    </ul>
+                </div>
+            </a>
+        </div>
+    </div>
+    <!-- <footer>
+      &copy; to me
+    </footer> -->
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 
