added post layout

--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -41,7 +41,7 @@
             <a href="{{site.baseurl}}/introduction">
                 <div class="list-content">
                     <div class="col-md-12">
-                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
+                        <img src="{{site.baseurl}}/assets/images/GreenedgeFoxHeadIcon.svg" style="height: 125px" />
                     </div>
                     <div class="col-md-12">
                         <h2>What is GreenEdge?</h2>
