--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -28,177 +28,159 @@
     text-decoration: none;
     color: black;
   }
-
+ .list-icon{
+    height: 7em
+ }
 </style>
 <body class="container">
-    <div class="row">
+    <div class="row" style="margin-bottom:2em;">
         <div class="col-12">
             <h1 style="text-align: center;">Welcome to GreenEdge training</h1>
         </div>
     </div>
-    <div class="row">
-        <div class="col-4 list-content-container">
-            <a href="{{site.baseurl}}/introduction">
-                <div class="list-content">
-                    <div class="col-md-12">
-                        <img src="{{site.baseurl}}/assets/images/GreenedgeFoxHeadIcon.svg" style="height: 125px" />
-                    </div>
-                    <div class="col-md-12">
-                        <h2>What is GreenEdge?</h2>
-                    </div>
+    <div class="row list-content-container">
+        <a href="{{site.baseurl}}/introduction">
+            <div class="list-content row">
+                <div class="col-2">
+                    <img class="list-icon" src="{{site.baseurl}}/assets/images/GreenedgeFoxHeadIcon.svg" />
+                </div>
+                <div class="col-8 align-self-center">
+                    <h2>What is GreenEdge?</h2>
                     <p>
-                        Learn more about what the GreenEdge portal supports.
+                        Learn how GreenEdge helps you minimizing the effort of collecting your CO2 emissions and assist in reporting and planning to reach your goals of reducing your carbon emission footprint
                     </p>
                 </div>
-            </a>
-        </div>
+            </div>
+        </a>
     </div>
-    <div class="row">
-        <div class="col-4 list-content-container">
-            <a href="{{site.baseurl}}/dashboard">
-                <div class="list-content">
-                    <div class="col-md-12">
-                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
-                    </div>
-                    <div class="col-md-12">
-                        <h2>Dashboard</h2>
-                    </div>
+    <div class="row list-content-container">
+        <a href="{{site.baseurl}}/dashboard">
+            <div class="list-content row">
+                <div class="col-2">
+                    <img class="list-icon" src="{{site.baseurl}}/assets/images/dashboard.svg" />
+                </div>
+                <div class="col-8 align-self-center">
+                    <h2>Dashboard</h2>
                     <p>
-                        Explanation of the Greenedge dashboard and its components.
+                        The GreenEdge dashboard aims to engage and quickly display your progress and activities to reach your goals
                     </p>
                 </div>
-            </a>
-        </div>
+            </div>
+        </a>
     </div>
-    <div class="row">
-        <div class="col-4 list-content-container">
-            <a href="{{site.baseurl}}/business-unit">
-                <div class="list-content">
-                    <div class="col-md-12">
-                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
-                    </div>
-                    <div class="col-md-12">
-                        <h2>Edit Business unit information</h2>
-                    </div>
+    <div class="row list-content-container">
+        <a href="{{site.baseurl}}/business-units">
+            <div class="list-content row">
+                <div class="col-2">
+                    <img class="list-icon" src="{{site.baseurl}}/assets/images/business-unit.svg" />
+                </div>
+                <div class="col-8 align-self-center">
+                    <h2>Manage your Business units</h2>
                     <p>
-                        This module will cover how to view and edit business unit information
+                        This module will cover how to view and edit business unit information.
                     </p>
                 </div>
-            </a>
-        </div>
+            </div>
+        </a>
     </div>
-    <div class="row">
-        <div class="col-4 list-content-container">
-            <a href="{{site.baseurl}}/sites">
-                <div class="list-content">
-                    <div class="col-md-12">
-                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
-                    </div>
-                    <div class="col-md-12">
-                        <h2>Manage sites</h2>
-                    </div>
+    <div class="row list-content-container">
+        <a href="{{site.baseurl}}/sites">
+            <div class="list-content row">
+                <div class="col-2">
+                    <img class="list-icon" src="{{site.baseurl}}/assets/images/site.svg" />
+                </div>
+                <div class="col-8 align-self-center">
+                    <h2>Manage Sites</h2>
                     <p>
                         Learn how to create/ edit or delete a site in this chapter
                     </p>
                 </div>
-            </a>
-        </div>
+            </div>
+        </a>
     </div>
-    <div class="row">
-        <div class="col-4 list-content-container">
-            <a href="{{site.baseurl}}/emission-source">
-                <div class="list-content">
-                    <div class="col-md-12">
-                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
-                    </div>
-                    <div class="col-md-12">
-                        <h2>Manage emission source</h2>
-                    </div>
+    <div class="row list-content-container">
+        <a href="{{site.baseurl}}/emission-source">
+            <div class="list-content row">
+                <div class="col-2">
+                    <img class="list-icon" src="{{site.baseurl}}/assets/images/emission-source.svg" />
+                </div>
+                <div class="col-8 align-self-center">
+                    <h2>Work with Emission sources</h2>
                     <p>
                         There are two different kind of emission sources. Site related emission sources and non site related emissions sources. Learn how to create/edit and delete emission sources.
                     </p>
                 </div>
-            </a>
-        </div>
+            </div>
+        </a>
     </div>
-    <div class="row">
-        <div class="col-4 list-content-container">
-            <a href="{{site.baseurl}}/baseline-budget">
-                <div class="list-content">
-                    <div class="col-md-12">
-                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
-                    </div>
-                    <div class="col-md-12">
-                        <h2>Create baseline & budget</h2>
-                    </div>
+    <div class="row list-content-container">
+        <a href="{{site.baseurl}}/baseline-budget">
+            <div class="list-content row">
+                <div class="col-2">
+                    <img class="list-icon" src="{{site.baseurl}}/assets/images/budget.svg" />
+                </div>
+                <div class="col-8 align-self-center">
+                    <h2>Create baseline & budget</h2>
                     <p>
                         Create goals, this section will show how to create a baseline and budget.
                     </p>
                 </div>
-            </a>
-        </div>
+            </div>
+        </a>
     </div>
-    <div class="row">
-        <div class="col-4 list-content-container">
-            <a href="{{site.baseurl}}/actions">
-                <div class="list-content">
-                    <div class="col-md-12">
-                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
-                    </div>
-                    <div class="col-md-12">
-                        <h2>Manage actions</h2>
-                    </div>
+    <div class="row list-content-container">
+        <a href="{{site.baseurl}}/actions">
+            <div class="list-content row">
+                <div class="col-2">
+                    <img class="list-icon" src="{{site.baseurl}}/assets/images/actions.svg" />
+                </div>
+                <div class="col-8 align-self-center">
+                    <h2>Manage actions</h2>
                     <p>
                         To follow up your goals, use actions. This module shows how to create/ edit and remove actions.
                     </p>
                 </div>
-            </a>
-        </div>
+            </div>
+        </a>
     </div>
-    <div class="row">
-        <div class="col-4 list-content-container">
-            <a href="{{site.baseurl}}/members">
-                <div class="list-content">
-                    <div class="col-md-12">
-                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
-                    </div>
-                    <div class="col-md-12">
-                        <h2>Manage members</h2>
-                    </div>
+    <div class="row list-content-container">
+        <a href="{{site.baseurl}}/members">
+            <div class="list-content row">
+                <div class="col-2">
+                    <img class="list-icon" src="{{site.baseurl}}/assets/images/members.svg" />
+                </div>
+                <div class="col-8 align-self-center">
+                    <h2>Invite your team</h2>
                     <p>
                         Discover how to Add/ edit and remove members.
                     </p>
                 </div>
-            </a>
-        </div>
+            </div>
+        </a>
     </div>
-    <div class="row">
-        <div class="col-4 list-content-container">
-            <a href="{{site.baseurl}}/reports">
-                <div class="list-content">
-                    <div class="col-md-12">
-                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
-                    </div>
-                    <div class="col-md-12">
-                        <h2>Manage reports</h2>
-                    </div>
+    <div class="row list-content-container">
+        <a href="{{site.baseurl}}/reports">
+            <div class="list-content row">
+                <div class="col-2">
+                    <img class="list-icon" src="{{site.baseurl}}/assets/images/reports.svg" />
+                </div>
+                <div class="col-8 align-self-center">
+                    <h2>Analyze your emissions</h2>
                     <p>
                         Learn how to create your own reports based on the collected data
                     </p>
                 </div>
-            </a>
-        </div>
+            </div>
+        </a>
     </div>
-    <div class="row">
-        <div class="col-4 list-content-container">
-            <a href="{{site.baseurl}}/extra">
-                <div class="list-content">
-                    <div class="col-md-12">
-                        <img src="{{site.baseurl}}/images/logo_head.svg" style="height: 125px" />
-                    </div>
-                    <div class="col-md-12">
-                        <h2>Extra</h2>
-                    </div>
+    <div class="row list-content-container">
+        <a href="{{site.baseurl}}/extra">
+            <div class="list-content row">
+                <div class="col-2">
+                    <img class="list-icon" src="{{site.baseurl}}/assets/images/extra.svg" />
+                </div>
+                <div class="col-8 align-self-center">
+                    <h2>Extra</h2>
                     <ul>
                         <li>How to create a support/bug</li>
                         <li>How to suggest feature</li>
@@ -206,9 +188,10 @@
                         <li>(SiteAdmin only) Split business unit</li>
                     </ul>
                 </div>
-            </a>
-        </div>
+            </div>
+        </a>
     </div>
+    
     <!-- <footer>
       &copy; to me
     </footer> -->
