jobbar på länkar

--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -42,7 +42,7 @@
         <a href="{{site.baseurl}}/introduction">
             <div class="list-content row">
                 <div class="col-2">
-                    <img class="list-icon" src="{{site.baseurl}}/assets/images/GreenedgeFoxHeadIcon.svg" />
+                    <img class="list-icon" src="{{site.baseurl}}assets/images/GreenedgeFoxHeadIcon.svg" />
                 </div>
                 <div class="col-8 align-self-center">
                     <h2>What is GreenEdge?</h2>
@@ -57,7 +57,7 @@
         <a href="{{site.baseurl}}/dashboard">
             <div class="list-content row">
                 <div class="col-2">
-                    <img class="list-icon" src="{{site.baseurl}}/assets/images/dashboard.svg" />
+                    <img class="list-icon" src="{{site.baseurl}}assets/images/dashboard.svg" />
                 </div>
                 <div class="col-8 align-self-center">
                     <h2>Dashboard</h2>
@@ -72,7 +72,7 @@
         <a href="{{site.baseurl}}/business-units">
             <div class="list-content row">
                 <div class="col-2">
-                    <img class="list-icon" src="{{site.baseurl}}/assets/images/business-unit.svg" />
+                    <img class="list-icon" src="{{site.baseurl}}assets/images/business-unit.svg" />
                 </div>
                 <div class="col-8 align-self-center">
                     <h2>Manage your Business units</h2>
@@ -87,7 +87,7 @@
         <a href="{{site.baseurl}}/sites">
             <div class="list-content row">
                 <div class="col-2">
-                    <img class="list-icon" src="{{site.baseurl}}/assets/images/site.svg" />
+                    <img class="list-icon" src="{{site.baseurl}}assets/images/site.svg" />
                 </div>
                 <div class="col-8 align-self-center">
                     <h2>Manage Sites</h2>
@@ -102,7 +102,7 @@
         <a href="{{site.baseurl}}/emission-source">
             <div class="list-content row">
                 <div class="col-2">
-                    <img class="list-icon" src="{{site.baseurl}}/assets/images/emission-source.svg" />
+                    <img class="list-icon" src="{{site.baseurl}}assets/images/emission-source.svg" />
                 </div>
                 <div class="col-8 align-self-center">
                     <h2>Work with Emission sources</h2>
@@ -117,7 +117,7 @@
         <a href="{{site.baseurl}}/baseline-budget">
             <div class="list-content row">
                 <div class="col-2">
-                    <img class="list-icon" src="{{site.baseurl}}/assets/images/budget.svg" />
+                    <img class="list-icon" src="{{site.baseurl}}assets/images/budget.svg" />
                 </div>
                 <div class="col-8 align-self-center">
                     <h2>Create baseline & budget</h2>
@@ -132,7 +132,7 @@
         <a href="{{site.baseurl}}/actions">
             <div class="list-content row">
                 <div class="col-2">
-                    <img class="list-icon" src="{{site.baseurl}}/assets/images/actions.svg" />
+                    <img class="list-icon" src="{{site.baseurl}}assets/images/actions.svg" />
                 </div>
                 <div class="col-8 align-self-center">
                     <h2>Manage actions</h2>
@@ -147,7 +147,7 @@
         <a href="{{site.baseurl}}/members">
             <div class="list-content row">
                 <div class="col-2">
-                    <img class="list-icon" src="{{site.baseurl}}/assets/images/members.svg" />
+                    <img class="list-icon" src="{{site.baseurl}}assets/images/members.svg" />
                 </div>
                 <div class="col-8 align-self-center">
                     <h2>Invite your team</h2>
@@ -162,7 +162,7 @@
         <a href="{{site.baseurl}}/reports">
             <div class="list-content row">
                 <div class="col-2">
-                    <img class="list-icon" src="{{site.baseurl}}/assets/images/reports.svg" />
+                    <img class="list-icon" src="{{site.baseurl}}assets/images/reports.svg" />
                 </div>
                 <div class="col-8 align-self-center">
                     <h2>Analyze your emissions</h2>
@@ -177,7 +177,7 @@
         <a href="{{site.baseurl}}/extra">
             <div class="list-content row">
                 <div class="col-2">
-                    <img class="list-icon" src="{{site.baseurl}}/assets/images/extra.svg" />
+                    <img class="list-icon" src="{{site.baseurl}}assets/images/extra.svg" />
                 </div>
                 <div class="col-8 align-self-center">
                     <h2>Extra</h2>
