--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -35,11 +35,11 @@
 <body class="container">
     <div class="row" style="margin-bottom:2em;">
         <div class="col-12">
-            <h1 style="text-align: center;">Welcome to GreenEdge training</h1>
+            <h1 style="text-align: center;">Welcome to GreenEdge training v0.9</h1>
         </div>
     </div>
     <div class="row list-content-container">
-        <a href="{{site.baseurl}}/introduction">
+        <a href="{{site.baseurl}}introduction">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/GreenedgeFoxHeadIcon.svg" />
