--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -35,7 +35,7 @@
 <body class="container">
     <div class="row" style="margin-bottom:2em;">
         <div class="col-12">
-            <h1 style="text-align: center;">Welcome to GreenEdge training v0.9</h1>
+            <h1 style="text-align: center;">Welcome to GreenEdge training v0.91</h1>
         </div>
     </div>
     <div class="row list-content-container">
@@ -54,7 +54,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="{{site.baseurl}}/dashboard">
+        <a href="}{{site.baseurl}}dashboard">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/dashboard.svg" />
@@ -69,7 +69,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="{{site.baseurl}}/business-units">
+        <a href="}{{site.baseurl}}business-units">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/business-unit.svg" />
@@ -84,7 +84,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="{{site.baseurl}}/sites">
+        <a href="}{{site.baseurl}}sites">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/site.svg" />
@@ -99,7 +99,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="{{site.baseurl}}/emission-source">
+        <a href="}{{site.baseurl}}emission-source">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/emission-source.svg" />
@@ -114,7 +114,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="{{site.baseurl}}/baseline-budget">
+        <a href="}{{site.baseurl}}baseline-budget">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/budget.svg" />
@@ -129,7 +129,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="{{site.baseurl}}/actions">
+        <a href="}{{site.baseurl}}actions">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/actions.svg" />
@@ -144,7 +144,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="{{site.baseurl}}/members">
+        <a href="}{{site.baseurl}}members">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/members.svg" />
@@ -159,7 +159,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="{{site.baseurl}}/reports">
+        <a href="}{{site.baseurl}}reports">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/reports.svg" />
@@ -174,7 +174,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="{{site.baseurl}}/extra">
+        <a href="}{{site.baseurl}}extra">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/extra.svg" />
