--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style.css">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/main.css">
+  <!-- <link rel="stylesheet" href="/css/style.css"> -->
 </head>
 <style>
   .list-content-container a:link {
@@ -35,7 +36,7 @@
 <body class="container">
     <div class="row" style="margin-bottom:2em;">
         <div class="col-12">
-            <h1 style="text-align: center;">Welcome to GreenEdge training v0.91</h1>
+            <h1 style="text-align: center;">Welcome to GreenEdge training v0.93</h1>
         </div>
     </div>
     <div class="row list-content-container">
@@ -54,7 +55,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="}{{site.baseurl}}dashboard">
+        <a href="{{site.baseurl}}dashboard">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/dashboard.svg" />
@@ -69,7 +70,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="}{{site.baseurl}}business-units">
+        <a href="{{site.baseurl}}business-units">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/business-unit.svg" />
@@ -84,7 +85,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="}{{site.baseurl}}sites">
+        <a href="{{site.baseurl}}sites">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/site.svg" />
@@ -99,7 +100,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="}{{site.baseurl}}emission-source">
+        <a href="{{site.baseurl}}emission-source">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/emission-source.svg" />
@@ -114,7 +115,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="}{{site.baseurl}}baseline-budget">
+        <a href="{{site.baseurl}}baseline-budget">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/budget.svg" />
@@ -129,7 +130,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="}{{site.baseurl}}actions">
+        <a href="{{site.baseurl}}actions">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/actions.svg" />
@@ -144,7 +145,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="}{{site.baseurl}}members">
+        <a href="{{site.baseurl}}members">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/members.svg" />
@@ -159,7 +160,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="}{{site.baseurl}}reports">
+        <a href="{{site.baseurl}}reports">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/reports.svg" />
@@ -174,7 +175,7 @@
         </a>
     </div>
     <div class="row list-content-container">
-        <a href="}{{site.baseurl}}extra">
+        <a href="{{site.baseurl}}extra">
             <div class="list-content row">
                 <div class="col-2">
                     <img class="list-icon" src="{{site.baseurl}}assets/images/extra.svg" />
@@ -196,6 +197,8 @@
       &copy; to me
     </footer> -->
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
 
 </html>
