--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -36,7 +36,7 @@
 <body class="container">
     <div class="row" style="margin-bottom:2em;">
         <div class="col-12">
-            <h1 style="text-align: center;">Welcome to GreenEdge training v0.94</h1>
+            <h1 style="text-align: center;">Welcome to GreenEdge training v0.95 {{site.baseurl}}</h1>
         </div>
     </div>
     <div class="row list-content-container">
